# downloaderconcept

./: CMakeLists.txt  Downloader.cpp  Downloader.hpp  Transactror.cpp  Transactror.hpp
Actions/: ActionEnv.hpp  ActionFactory.cpp  ActionFactory.hpp  ActionTypeWrapper.hpp  IAction.hpp  IActionFactory.hpp  TorrentDownloadAction.cpp  TorrentDownloadAction.hpp
BittorrentSession/: BittorrentSession.cpp  BittorrentSession.hpp
Downloaders/: DownloadPool.cpp  DownloadPool.hpp
ServerAnswer/: IServerAnswerParser.hpp  IServerAnswerService.hpp  ServerAnswerService.cpp  ServerAnswerService.hpp  XMLServerAnswerParser.cpp  XMLServerAnswerParser.hpp
