cmake_minimum_required(VERSION 3.14)

project(downloaderconcept LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)

file(GLOB_RECURSE HEADERS LIST_DIRECTORIES false CONFIGURE_DEPENDS *.hpp)
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES false CONFIGURE_DEPENDS *.cpp)

add_executable(downloaderconcept
  ${HEADERS} ${SOURCES}
)
target_link_libraries(downloaderconcept Qt${QT_VERSION_MAJOR}::Core)
